# beast-in-making

./: .gitignore  Dockerfile  Procfile  SPEED_RESTORATION_GUIDE.md  app.py  enhanced_drm_fix.py  heroku.yml.disabled  install_drm_tools.sh  main.py  optimize_downloads.py  pyproject.toml  railway.toml.disabled  render-deploy-guide.md  render.yaml  render_diagnostics.py  render_optimize.sh  render_start.py  sainibots.txt  speed_fix.py  start.sh  vars.py
modules/: __init__.py  authorisation.py  drm_handler.py  html_handler.py  ott_downloader.py  railway_processor.py  saini.py  speed_optimizer.py  text_handler.py  ultra_fast_downloader.py  utils.py  vars.py  youtube_handler.py
