[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.15",
    "beautifulsoup4>=4.13.5",
    "cloudscraper>=1.2.71",
    "crypto>=1.4.1",
    "cryptography>=45.0.7",
    "ffmpeg-python>=0.2.0",
    "ffmpeg>=1.4",
    "flask==1.1.2",
    "gunicorn==20.1.0",
    "m3u8>=6.0.0",
    "motor>=3.7.1",
    "mutagen>=1.47.0",
    "pillow>=11.3.0",
    "psutil>=7.0.0",
    "pycryptodome>=3.23.0",
    "pycryptodomex>=3.23.0",
    "pytube>=15.0.0",
    "pytz>=2025.2",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.43",
    "websockets>=15.0.1",
    "wget>=3.2",
    "youtube-dl>=2021.12.17",
    "yt-dlp>=2025.9.5",
    "python-telegram-bot>=22.3",
    "speedtest-cli>=2.1.3",
    "future>=1.0.0",
    "lxml>=6.0.1",
    "aiofiles==23.2.0",
    "uvloop>=0.21.0",
    "aiodns>=3.5.0",
    "tgcrypto>=1.2.5",
    "pyromod==1.5",
    "pyrogram>=2.0.106",
    "umongo==3.1.0",
    "pyjwt>=2.10.1",
    "pyopenssl>=25.1.0",
    "reportlab>=4.4.3",
    "pyrofork>=2.3.68",
    "python-dotenv==1.0.0",
    "google-auth>=2.40.3",
    "google-auth-oauthlib>=1.2.2",
    "google-auth-httplib2>=0.2.0",
    "google-api-python-client>=2.181.0",
    "itsdangerous==1.1.0",
    "jinja2==2.11.3",
    "werkzeug==1.0.1",
    "markupsafe==1.1.1",
]
